# neva

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Design.md  Dockerfile  LICENSE  README.md  docker-compose.yml  hackathon-details.md  pyproject.toml
app/: __init__.py  config.py  database.py  gemini_client.py  main.py  models.py
app/admin_ops/: __init__.py  config.py  redaction.py  repository.py  service.py
app/api/: __init__.py  admin_decks.py  admin_ops.py  admin_tune.py  deps.py  join.py  leaderboard.py  metrics.py  pair.py  routers.py  state.py  (+1 more)
build-docs/: demo-deck-concepts.example.json  dialect-factory-arch.md  hackathon-project-brief.md  prompts-and-frontend-handoff.md
contracts/: api_types.py  dirs.md  golden_record.md  schema.sql
deckgen/: __init__.py  __main__.py  cli.py  client.py  concept_gen.py  concepts.py  config.py  metrics.py  pipeline.py  prompts.py  publish.py
docs/: RESEARCH.md  ROADMAP.md
frontend/: DESIGN.md  PRODUCT.md  README.md
phase-plan/: README.md
scripts/: __init__.py  apply_migrations.py  apply_schema.py  bootstrap_database.py  deck_admin.py  pipeline_view.py  seed_demo_deck.py  tune_demo_supervisor.py
tune/: README.md  __init__.py  capture_demo_audio.ps1  compare.py  config.py  demo.py  events.py  live.py  make_dummy.py  make_smoke_fixture.py  manifest.py  metrics.py  preflight.py  prepare.py  pyproject.toml  run-real-demo.sh  train.py
worker/: __init__.py  __main__.py  config.py  corpus.py  fake_triage.py  fingerprint.py  gemini_adapter.py  health.py  media.py  models.py  prompts.py  repository.py  service.py
(+223 files in other folders)
