[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dialect-data-factory"
version = "0.1.0"
description = "Validated dialect speech corpus factory"
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.30",
  "fastapi>=0.115",
  "google-genai>=2.11.0",
  "pydantic-settings>=2.7",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.32",
  "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
