[project]
name = "dialect-data-factory-tune"
version = "0.1.0"
description = "Isolated Gemma 4 audio QLoRA and demo environment"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.14.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.3.0",
    "huggingface-hub>=1.23.0",
    "peft>=0.19.1",
    "soundfile>=0.14.0",
    "torch>=2.10.0",
    "transformers>=5.10.0",
    "trl>=0.24.0",
    "unsloth>=2026.7.2",
    "unsloth-zoo>=2026.7.2",
]

[tool.uv]
package = false
override-dependencies = [
    "transformers>=5.10.0",
]
